--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </ul>
     </nav>
 
-      <address>
+      <address class="address">
        <ul>
-<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li> <a href="tel:+110001111111">+11 (000) 111-11-11 </a></li>
+         <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11 </a></li>
        </ul>
       </address>
   
@@ -39,9 +39,9 @@
     <main>
 
 <section> 
-  <h1>Effective Solutions
+  <h1 class="h1">Effective Solutions
   for Your Business </h1>
-<button type="button">Order Service</button>   
+<button class="button" type="button">Order Service</button>   
   </section>
   <section>  
     <h2> Element </h2>
