--- a/index.html
+++ b/index.html
@@ -100,6 +100,35 @@
     </ul>
 
    </section>
+   <section>
+    <h2>Our Portfolio</h2>
+    <ul>
+       <li>
+        <img src="./images/img(5).jpg" alt="Banking App"
+        width="264" />
+       </li>
+       <li>
+        <img src="./images/img(6).jpg" ait="Cashless Payment"
+        width="264" />
+       </li>
+       <li>
+        <img src="./images/img(7).jpg" alt="Meditation App" 
+        width="264" />
+         <li>
+          <img src="./images/img(8).jpg" ait="Taxi Service"
+          width="264" />
+        </li>
+       <li>
+        <img src="./images/img(9).jpg" ait="Screen Illustrations"
+        width="264" />
+       </li>
+       <li>
+        <img src="./images/img(10).jpg" ait="Online Courses"
+        width="264" />
+       </li>
+      </li>
+    </ul>
+   </section>
    
  </main>
 
