--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
 
 <section> 
-  <h1 class="h1">Effective Solutions
+  <h1 class="effective">Effective Solutions
   for Your Business </h1>
 <button class="button" type="button">Order Service</button>   
   </section>
