--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
     <h2> Element </h2>
     <ul>
      <li>
-      <h3 class="strategy">Strategy</h3>
+      <h3 class="strategy-link">Strategy</h3>
     <p> Our goal is to identify the business
       problem to walk away with the perfect and creative solution.</p>
      </li> 
      <li>
-       <h3 class="strategy">Punctuality</h3>
+       <h3 class="strategy-link">Punctuality</h3>
     <p> Bring the key message to the brand's audience
       for the best price within the shortest possible time.</p>
     </li> 
-    <li> <h3 class="strategy">Diligence</h3>
+    <li> <h3 class="strategy-link">Diligence</h3>
     <p>Research and confirm brands that present
       the strongest digital growth opportunities and minimize risk.</p>
      </li>
-     <li><h3 class="strategy">Technologies</h3>
+     <li><h3 class="strategy-link">Technologies</h3>
     <p>Design practice focused on digital experiences.
       We bring forth a deep passion for problem-solving.</p>
      </li>
@@ -68,10 +68,10 @@
    
   </section>
  
-   <section class="section">
+   <section class="section-forst">
     <h2>Our Team </h2>
     <ul>  
-      <li>
+      <li class="">
          <img src="./images/img(1).jpg" alt="mark guerrero"
           width="264" height="260" />
          <h3>Mark Guerrero</h3>
@@ -99,7 +99,7 @@
     </ul>
 
    </section>
-   <section>
+   <section class="section-tu">
     <h2>Our Portfolio</h2>
     <ul>
        <li>
@@ -108,7 +108,7 @@
        <h3>Banking App</h3> 
        <p>App</p>
        </li>
-       
+
        <li>
         <img src="./images/img(6).jpg" alt="cashless payment"
         width="264" />
