--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     <ul>
      <li>
       <h3 class="strategy-link">Strategy</h3>
-    <p> Our goal is to identify the business
+    <p class="text"> Our goal is to identify the business
       problem to walk away with the perfect and creative solution.</p>
      </li> 
      <li>
        <h3 class="strategy-link">Punctuality</h3>
-    <p> Bring the key message to the brand's audience
+    <p class="text"> Bring the key message to the brand's audience
       for the best price within the shortest possible time.</p>
     </li> 
     <li> <h3 class="strategy-link">Diligence</h3>
-    <p>Research and confirm brands that present
+    <p class="text">Research and confirm brands that present
       the strongest digital growth opportunities and minimize risk.</p>
      </li>
      <li><h3 class="strategy-link">Technologies</h3>
-    <p>Design practice focused on digital experiences.
+    <p class="text">Design practice focused on digital experiences.
       We bring forth a deep passion for problem-solving.</p>
      </li>
     </ul>
@@ -74,27 +74,27 @@
       <li class="">
          <img src="./images/img(1).jpg" alt="mark guerrero"
           width="264" height="260" />
-         <h3>Mark Guerrero</h3>
-         <p>Product Designer</p>
+         <h3 class="strategy-link">Mark Guerrero</h3>
+         <p class="text">Product Designer</p>
       </li>
       <li>
          <img src="./images/img(2).jpg" alt="tom ford"
           width="264" height="260" />
-         <h3>Tom Ford</h3>
-         <p>Frontend Developer</p>
+         <h3 class="strategy-link">Tom Ford</h3>
+         <p class="text">Frontend Developer</p>
       </li>
       <li>
          <img src="./images/img(3).jpg" alt="camila garcia"
          width="264" height="260" />
-         <h3>Camila Garcia</h3>
-         <p>Marketing</p>
+         <h3 class="strategy-link">Camila Garcia</h3>
+         <p class="text">Marketing</p>
       </li>
       <li>
          <img src="./images/img(4).jpg" alt="daniel wilsin"
          width="264"
           height="260" />
-         <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+         <h3 class="strategy-link">Daniel Wilson</h3>
+        <p class="text">UI Designer</p>
       </li>
     </ul>
 
@@ -105,41 +105,41 @@
        <li>
         <img src="./images/img(5).jpg" alt="banking app"
         width="264" />
-       <h3>Banking App</h3> 
-       <p>App</p>
+       <h3 class="strategy-link">Banking App</h3> 
+       <p class="text">App</p>
        </li>
 
        <li>
         <img src="./images/img(6).jpg" alt="cashless payment"
         width="264" />
-        <h3>Cashless Payment</h3>
-        <p>Marketing</p>
+        <h3 class="strategy-link">Cashless Payment</h3>
+        <p class="text">Marketing</p>
        </li>
 
        <li>
         <img src="./images/img(7).jpg" alt="meditation app" 
         width="264" />
-        <h3>Meditation App</h3>
-        <p>App</p>
+        <h3 class="strategy-link">Meditation App</h3>
+        <p class="text">App</p>
        </li>
         
          <li>
           <img src="./images/img(8).jpg" alt="taxi service"
           width="264" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="strategy-link">Taxi Service</h3>
+          <p class="text">Marketing</p>
         </li>
        <li>
         <img src="./images/img(9).jpg" alt="screen illustrations"
         width="264" />
-        <h3>Screen Illustrations</h3>
-        <p>Design</p>
+        <h3 class="strategy-link">Screen Illustrations</h3>
+        <p class="text">Design</p>
        </li>
        <li>
         <img src="./images/img(10).jpg" alt="online courses"
         width="264" />
-        <h3>Online Courses</h3>
-        <p>Marketing</p>
+        <h3 class="strategy-link">Online Courses</h3>
+        <p class="text">Marketing</p>
        </li>
     </ul>
    </section>
@@ -149,7 +149,7 @@
  <footer class="footer-hero">
     <a href="./index.html">WebStudio</a>
 
-        <p>Increase the flow of customers and sales for your business
+        <p class="text">Increase the flow of customers and sales for your business
            with digital marketing &
        growth solutions.  </p>
 </footer>
