--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section  class="mein-mein-hero"> 
   <h1 class="effective">Effective Solutions
   for Your Business </h1>
-<button class="button" type="button">Order Service</button>   
+<button class="button">Order Service</button>   
 </section>
 <section  class="section">  
     <h2> Element </h2>
