--- a/index.html
+++ b/index.html
@@ -78,27 +78,27 @@
       <li class="">
          <img src="./images/img(1).jpg" alt="mark guerrero"
           width="264" height="260" />
-         <h3 class="strategy-link">Mark Guerrero</h3>
-         <p class="text">Product Designer</p>
+         <h3 class="strategy-link-our">Mark Guerrero</h3>
+         <p class="text-our">Product Designer</p>
       </li>
       <li>
          <img src="./images/img(2).jpg" alt="tom ford"
           width="264" height="260" />
-         <h3 class="strategy-link">Tom Ford</h3>
-         <p class="text">Frontend Developer</p>
+         <h3 class="strategy-link-our">Tom Ford</h3>
+         <p class="text-our">Frontend Developer</p>
       </li>
       <li>
          <img src="./images/img(3).jpg" alt="camila garcia"
          width="264" height="260" />
-         <h3 class="strategy-link">Camila Garcia</h3>
-         <p class="text">Marketing</p>
+         <h3 class="strategy-link-our">Camila Garcia</h3>
+         <p class="text-our">Marketing</p>
       </li>
       <li>
          <img src="./images/img(4).jpg" alt="daniel wilsin"
          width="264"
           height="260" />
-         <h3 class="strategy-link">Daniel Wilson</h3>
-        <p class="text">UI Designer</p>
+         <h3 class="strategy-link-our">Daniel Wilson</h3>
+        <p class="text-our">UI Designer</p>
       </li>
     </ul>
 
