--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
  </main>
 
  <footer class="footer-hero">
-    <a href="./index.html">WebStudio</a>
+  
+
+    <a class="logo"href="./index.html">Web<span class="logo-part-foter">Studio</span></a>
 
         <p class="text">Increase the flow of customers and sales for your business
            with digital marketing &
