--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span> </a>
 
         <ul>
-          <li><a class="nav-link" href="">Studio </a></li>
+          <li><a class="nav-link" href="./index.html">Studio </a></li>
           <li><a class="nav-link" href="">Portfolio </a></li>
           <li><a class="nav-link" href="">Contacts </a>
         </ul>
@@ -43,7 +43,7 @@
   for Your Business </h1>
 
 
-<button class="button">Order Service</button>   
+<button type="button" class="hero-btn">Order Service</button>   
 
 
 </section>
