--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
   </section>
  
    <section class="section-forst">
-    <h2>Our Team </h2>
+    <h2 class="title-Team">Our Team </h2>
     <ul>  
-      <li class="">
+      <li class="li-fon">
          <img src="./images/img(1).jpg" alt="mark guerrero"
           width="264" height="260" />
          <h3 class="strategy-link-our">Mark Guerrero</h3>
          <p class="text-our">Product Designer</p>
       </li>
-      <li>
+      <li class="li-fon">
          <img src="./images/img(2).jpg" alt="tom ford"
           width="264" height="260" />
          <h3 class="strategy-link-our">Tom Ford</h3>
          <p class="text-our">Frontend Developer</p>
       </li>
-      <li>
+      <li class="li-fon">
          <img src="./images/img(3).jpg" alt="camila garcia"
          width="264" height="260" />
          <h3 class="strategy-link-our">Camila Garcia</h3>
          <p class="text-our">Marketing</p>
       </li>
-      <li>
+      <li class="li-fon">
          <img src="./images/img(4).jpg" alt="daniel wilsin"
-         width="264"
+          width="264"
           height="260" />
          <h3 class="strategy-link-our">Daniel Wilson</h3>
         <p class="text-our">UI Designer</p>
@@ -104,44 +104,44 @@
 
    </section>
    <section class="section-tu">
-    <h2>Our Portfolio</h2>
+    <h2 class="title-Portfolio">Our Portfolio</h2>
     <ul>
        <li>
         <img src="./images/img(5).jpg" alt="banking app"
-        width="264" />
+        width="360" />
        <h3 class="strategy-link">Banking App</h3> 
        <p class="text">App</p>
        </li>
 
        <li>
         <img src="./images/img(6).jpg" alt="cashless payment"
-        width="264" />
+        width="360" />
         <h3 class="strategy-link">Cashless Payment</h3>
         <p class="text">Marketing</p>
        </li>
 
        <li>
         <img src="./images/img(7).jpg" alt="meditation app" 
-        width="264" />
+        width="360" />
         <h3 class="strategy-link">Meditation App</h3>
         <p class="text">App</p>
        </li>
         
          <li>
           <img src="./images/img(8).jpg" alt="taxi service"
-          width="264" />
+          width="360" />
           <h3 class="strategy-link">Taxi Service</h3>
           <p class="text">Marketing</p>
         </li>
        <li>
         <img src="./images/img(9).jpg" alt="screen illustrations"
-        width="264" />
+        width="360" />
         <h3 class="strategy-link">Screen Illustrations</h3>
         <p class="text">Design</p>
        </li>
        <li>
         <img src="./images/img(10).jpg" alt="online courses"
-        width="264" />
+        width="360" />
         <h3 class="strategy-link">Online Courses</h3>
         <p class="text">Marketing</p>
        </li>
