--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
           <p class="text">Marketing</p>
         </li>
        <li>
-        <img src="./images/img(9).jpg" alt="screen illustrations"
+        <img src="./images/img(9).jpg"alt="screen illustrations"
         width="360" />
         <h3 class="strategy-link">Screen Illustrations</h3>
         <p class="text">Design</p>
        </li>
        <li>
-        <img src="./images/img(10).jpg" alt="online courses"
+        <img src="./images/img(10).jpg"alt="online courses"
         width="360" />
         <h3 class="strategy-link">Online Courses</h3>
         <p class="text">Marketing</p>
@@ -155,7 +155,7 @@
 
     <a class="logo"href="./index.html">Web<span class="logo-part-foter">Studio</span></a>
 
-        <p class="text">Increase the flow of customers and sales for your business
+        <p class="text-footer">Increase the flow of customers and sales for your business
            with digital marketing &
        growth solutions.  </p>
 </footer>
