--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
    
   </section>
  
-   <section class="section-forst">
+   <section class="section-fotrs">
     <h2 class="title-Team">Our Team </h2>
     <ul>  
       <li class="li-fon">
@@ -103,7 +103,7 @@
     </ul>
 
    </section>
-   <section class="section-tu">
+   <section class="section-fotrs">
     <h2 class="title-Portfolio">Our Portfolio</h2>
     <ul>
        <li>
