--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
           <p class="text">Marketing</p>
         </li>
        <li>
-        <img src="./images/img(9).jpg"alt="screen illustrations"
+        <img src="./images/img(9).jpg"alt="screen-illustrations"
         width="360" />
         <h3 class="strategy-link">Screen Illustrations</h3>
         <p class="text">Design</p>
        </li>
        <li>
-        <img src="./images/img(10).jpg"alt="online courses"
+        <img src="./images/img(10).jpg"alt="onlin-courses"
         width="360" />
         <h3 class="strategy-link">Online Courses</h3>
         <p class="text">Marketing</p>
