--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
    
   </section>
  
-   <section class="section-fotrs">
-    <h2 class="title-Team">Our Team </h2>
+   <section class="section-forst">
+    <h2 class="title-team">Our Team </h2>
     <ul>  
       <li class="li-fon">
          <img src="./images/img(1).jpg" alt="mark guerrero"
@@ -104,7 +104,7 @@
 
    </section>
    <section class="section-fotrs">
-    <h2 class="title-Portfolio">Our Portfolio</h2>
+    <h2 class="title-portfolio">Our Portfolio</h2>
     <ul>
        <li>
         <img src="./images/img(5).jpg" alt="banking app"
@@ -134,13 +134,13 @@
           <p class="text">Marketing</p>
         </li>
        <li>
-        <img src="./images/img(9).jpg"alt="screen-illustrations"
+        <img src="./images/img(9).jpg" alt="screen-illustrations"
         width="360" />
         <h3 class="strategy-link">Screen Illustrations</h3>
         <p class="text">Design</p>
        </li>
        <li>
-        <img src="./images/img(10).jpg"alt="onlin-courses"
+        <img src="./images/img(10).jpg" alt="onlin-courses"
         width="360" />
         <h3 class="strategy-link">Online Courses</h3>
         <p class="text">Marketing</p>
@@ -153,7 +153,7 @@
  <footer class="footer-hero">
   
 
-    <a class="logo"href="./index.html">Web<span class="logo-part-foter">Studio</span></a>
+    <a class="logo" href="./index.html">Web<span class="logo-part-foter">Studio</span></a>
 
         <p class="text-footer">Increase the flow of customers and sales for your business
            with digital marketing &
