--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <h2 class="title-portfolio">Our Portfolio</h2>
     <ul>
        <li>
-        <img src="./images/img(5).jpg" alt="banking app"
+        <img src="./images/img5.jpg" alt="banking app"
         width="360" />
        <h3 class="strategy-link">Banking App</h3> 
        <p class="text">App</p>
