--- a/index.html
+++ b/index.html
@@ -114,33 +114,33 @@
        </li>
 
        <li>
-        <img src="./images/img(6).jpg" alt="cashless payment"
+        <img src="./images/img6.jpg" alt="cashless payment"
         width="360" />
         <h3 class="strategy-link">Cashless Payment</h3>
         <p class="text">Marketing</p>
        </li>
 
        <li>
-        <img src="./images/img(7).jpg" alt="meditation app" 
+        <img src="./images/img7.jpg" alt="meditation app" 
         width="360" />
         <h3 class="strategy-link">Meditation App</h3>
         <p class="text">App</p>
        </li>
         
          <li>
-          <img src="./images/img(8).jpg" alt="taxi service"
+          <img src="./images/img8.jpg" alt="taxi service"
           width="360" />
           <h3 class="strategy-link">Taxi Service</h3>
           <p class="text">Marketing</p>
         </li>
        <li>
-        <img src="./images/img(9).jpg" alt="screen-illustrations"
+        <img src="./images/img9.jpg" alt="screen-illustrations"
         width="360" />
         <h3 class="strategy-link">Screen Illustrations</h3>
         <p class="text">Design</p>
        </li>
        <li>
-        <img src="./images/img(10).jpg" alt="onlin-courses"
+        <img src="./images/img10.jpg" alt="onlin-courses"
         width="360" />
         <h3 class="strategy-link">Online Courses</h3>
         <p class="text">Marketing</p>
